refactor Check and CustomerCard repositories to support pagination and sorting